--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,11 @@ crate-type = ["cdylib"]
 [dependencies]
 # napi = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013", features = ["napi4", "serde-json"] }
 # napi-derive = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013" }
-napi = { path = "../napi-rs/crates/napi", features = ["napi4", "serde-json"] }
+napi = { path = "../napi-rs/crates/napi", features = ["napi4", "serde-json", "tokio_rt"] }
 napi-derive = { path = "../napi-rs/crates/macro" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
+tokio = { version = "1", features = ["full"] }
 
 [target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
 mimalloc = { version = "0.1" }
