--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "scripts": {
     "artifacts": "napi artifacts",
     "bench": "node -r @swc-node/register benchmark/bench.ts",
+    "rebuild": "rm -rf target index.* && yarn build",
     "build": "napi build --platform --release --pipe \"prettier -w\"",
     "build:debug": "napi build --platform --pipe \"prettier -w\"",
     "format": "run-p format:prettier format:rs",
@@ -54,9 +55,10 @@
     "prepublishOnly": "napi prepublish -t npm",
     "test": "ava",
     "version": "napi version",
-    "debug": "ts-node test.ts"
+    "debug": "node test.js"
   },
   "devDependencies": {
+    "@alcalzone/jsonl-db": "^2.4.1",
     "@napi-rs/cli": "^2.0.0",
     "@swc-node/register": "^1.4.2",
     "@types/node": "^10",
@@ -66,6 +68,7 @@
     "ava": "^3.15.0",
     "benny": "^3.7.1",
     "chalk": "^5.0.0",
+    "chokidar": "^3.5.3",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
