--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 derive_builder = "0.10.2"
+indexmap = "1.8.0"
 # napi = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013", features = ["napi4", "serde-json"] }
 # napi-derive = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013" }
 napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
