--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,10 @@ filetime = "0.2.15"
 indexmap = "1.8.0"
 # napi = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013", features = ["napi4", "serde-json"] }
 # napi-derive = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013" }
-napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
-napi-derive = { path = "../napi-rs/crates/macro" }
-# napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number", features = ["napi6", "serde-json", "tokio_rt"] }
-# napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number" }
+# napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
+# napi-derive = { path = "../napi-rs/crates/macro" }
+napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number", features = ["napi6", "serde-json", "tokio_rt"] }
+napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 tokio = { version = "1", features = ["fs", "time", "io-util"] }
