--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "artifacts": "napi artifacts",
     "bench": "node -r @swc-node/register benchmark/bench.ts",
+    "bench2": "node -r @swc-node/register benchmark/bench2.ts",
     "rebuild": "rm -rf target lib.js lib.d.ts && yarn build",
     "build": "napi build --platform --release --js lib.js --dts lib.d.ts --pipe \"prettier -w\"",
     "build:debug": "napi build --platform --js lib.js --dts lib.d.ts --pipe \"prettier -w\"",
