--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@alcalzone/rsonl-db-darwin-arm64",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "os": [
     "darwin"
   ],
@@ -11,7 +11,7 @@
   "files": [
     "rsonl-db.darwin-arm64.node"
   ],
-  "description": "rsonl-db implementation used by the Z-Wave protocol, implemented in Rust",
+  "description": "Simple JSONL-based key-value store",
   "keywords": [
     "napi-rs",
     "NAPI",
