--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["AlCalzone <d.griesel@gmx.net>"]
 edition = "2021"
 name = "rsonl-db"
-version = "0.1.0"
+version = "0.3.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -13,12 +13,10 @@ crate-type = ["cdylib"]
 derive_builder = "0.10.2"
 filetime = "0.2.15"
 indexmap = "1.8.0"
-# napi = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013", features = ["napi4", "serde-json"] }
-# napi-derive = { git = "https://github.com/zeroslope/napi-rs", branch = "fix/1013" }
-napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
-napi-derive = { path = "../napi-rs/crates/macro" }
-# napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number", features = ["napi6", "serde-json", "tokio_rt"] }
-# napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number" }
+# napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
+# napi-derive = { path = "../napi-rs/crates/macro" }
+napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number", features = ["napi6", "serde-json", "tokio_rt"] }
+napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 tokio = { version = "1", features = ["fs", "time", "io-util"] }
