--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@alcalzone/jsonl-db": "^2.4.1",
     "@napi-rs/cli": "^2.0.0",
     "@swc-node/register": "^1.4.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -78,10 +79,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
+    "fs-extra": "^10.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
+    "sinon": "^13.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
