--- a/package.json
+++ b/package.json
@@ -58,20 +58,25 @@
     "format:rs": "cargo fmt",
     "lint": "eslint . -c ./.eslintrc.yml",
     "prepublishOnly": "napi prepublish -t npm",
-    "test": "ava",
+    "test:reset": "jest --clear-cache",
+    "test:ts": "jest",
+    "test:ci": "npm run test:ts -- --runInBand",
+    "test:watch": "npm run test:ts -- --watch",
+    "test": "npm run test:watch",
     "version": "napi version",
     "debug": "node test.js"
   },
   "devDependencies": {
     "@alcalzone/jsonl-db": "^2.4.1",
     "@napi-rs/cli": "^2.0.0",
+    "@swc-node/jest": "^1.4.3",
     "@swc-node/register": "^1.4.2",
     "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.0.2",
     "@types/node": "^10",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "alcalzone-shared": "^4.0.1",
-    "ava": "^3.15.0",
     "benny": "^3.7.1",
     "chalk": "^5.0.0",
     "chokidar": "^3.5.3",
@@ -81,6 +86,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.4",
+    "jest": "^27.3.1",
+    "jest-extended": "^0.11.5",
     "lint-staged": "^12.1.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
@@ -105,16 +112,5 @@
     "*.json": [
       "prettier --parser json --write"
     ]
-  },
-  "ava": {
-    "require": [
-      "@swc-node/register"
-    ],
-    "extensions": [
-      "ts"
-    ],
-    "environmentVariables": {
-      "TS_NODE_PROJECT": "./tsconfig.json"
-    }
   }
 }
