--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["AlCalzone <d.griesel@gmx.net>"]
 edition = "2021"
 name = "rsonl-db"
-version = "0.3.1"
+version = "0.4.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,10 +14,10 @@ anyhow = "1.0.53"
 derive_builder = "0.10.2"
 filetime = "0.2.15"
 indexmap = "1.8.0"
-napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
-napi-derive = { path = "../napi-rs/crates/macro" }
-# napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number+null-string", features = ["napi6", "serde-json", "tokio_rt"] }
-# napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number+null-string" }
+# napi = { path = "../napi-rs/crates/napi", features = ["napi6", "serde-json", "tokio_rt"] }
+# napi-derive = { path = "../napi-rs/crates/macro" }
+napi = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number+null-string", features = ["napi6", "serde-json", "tokio_rt"] }
+napi-derive = { git = "https://github.com/AlCalzone/napi-rs", branch = "auto-number+null-string" }
 serde = { version = "1.0.133", features = ["derive"] }
 serde_json = "1.0.74"
 thiserror = "1.0.30"
